# EasyStudio

./: LICENSE
kernel/: .gitignore  CMakeLists.txt  Message.md  README.en.md  README.md  main.cpp
kernel/CsdSerialize/: CMakeLists.txt  FlatBuffersSerialize.cpp  FlatBuffersSerialize.h  NodeReaderProtocol.h  ObjectFactory.cpp  ObjectFactory.h
kernel/CsdSerialize/reader/: ButtonReader.cpp  ButtonReader.h  CMakeLists.txt  ComAudioReader.cpp  ComAudioReader.h  ImageViewReader.cpp  ImageViewReader.h  LayoutReader.cpp  LayoutReader.h  NodeReader.cpp  NodeReader.h  ProjectNodeReader.cpp  ProjectNodeReader.h  SingleNodeReader.cpp  SingleNodeReader.h  SpriteReader.cpp  SpriteReader.h  TextReader.cpp  TextReader.h  WidgetReader.cpp  WidgetReader.h  ccTypes.cpp  ccTypes.h
kernel/cmake/: ExternalConfig.cmake
kernel/kernel/: Document.xml  EasyStudio.cbp  EasyStudio.lib  导出选中元件.jsfl  添加stop.jsfl  生成csd.jsfl
kernel/kernel/CsdSerialize/: CsdSerialize.cbp  CsdSerialize.lib
kernel/kernel/CsdSerialize/flatbuffers/: flatbuffers.cbp
kernel/kernel/CsdSerialize/reader/: reader.cbp  reader.lib
kernel/kernel/utils/: utils.cbp
kernel/kernel/websocket/: websocket.cbp
kernel/net/: WebSocketServer.cpp  WebSocketServer.h
kernel/static/: 添加onload.jsfl  选中转元件.jsfl
kernel/utils/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  DataTypes.h  DirHelper.h  DirWatcher.h  FlaExtension.cpp  FlaExtension.h  MiniZipHelper.h  PlistParser.h  RequestHelper.cpp  RequestHelper.h  ResConfigParser.cpp  ResConfigParser.h  TexturePacker.h  Tools.cpp  Tools.cpp.rej  Tools.h  ZipHelper.h  httplib.h
kernel/websocket/: CMakeLists.txt  Handlers.cpp  Handlers.h  StdAfx.h  WebSocketServer.cpp  WebSocketServer.h  empty.cpp
shell/: .eslintignore  package.json
shell/.erb/configs/: webpack.config.base.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.prod.babel.js
shell/assets/kernel/: CMakeCache.txt  Component.xml  EasyStudio.cbp  EasyStudio.exp  Makefile  cmake_install.cmake
shell/assets/kernel/CsdSerialize/: CsdSerialize.cbp  CsdSerialize.lib  Makefile  cmake_install.cmake
shell/assets/kernel/CsdSerialize/flatbuffers/: Makefile  cmake_install.cmake  flatbuffers.cbp
shell/assets/kernel/CsdSerialize/reader/: Makefile  cmake_install.cmake  reader.cbp  reader.lib
shell/assets/kernel/utils/: Makefile  cmake_install.cmake  utils.cbp
shell/assets/kernel/websocket/: Makefile  cmake_install.cmake  websocket.cbp
shell/src/: index.html  index.jsx  main.dev.ts  menu.ts  package.json  template.html  update.ts
shell/src/actions/: activity.js  generator.js  index.js  property.js  skin.js
shell/src/common/: auth.js  global.js  library.js  process.js  tinypng.js
shell/src/components/activity_template/: FileView.jsx  Index.jsx  StepsView.jsx  Toolbar.jsx  tabs.less
shell/src/components/connect_server/: Index.jsx
shell/src/components/login/: Index.jsx  index.css
shell/src/configs/: config.js
shell/src/constants/: fetchType.js  itemType.js  methodType.js  propertyType.js  readyState.js  timestamp.js
shell/src/middleware/: baseApi.js  qkidGate.js
shell/src/middleware/websocket/: ReduxWebSocket.ts  actionTypes.ts  actions.ts  createMiddleware.ts  index.ts  types.ts
shell/src/reducers/: activity.js  index.js  property.js  skin.js  websocket.js
shell/src/store/: configureStore.dev.js
